src/app/about/About.module.css
.container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 100%;
}

.container > div {
    padding: 1rem;
    display: flex;
    align-items: center;

}

.container .left {
    /*width: 50%;*/
    justify-content: flex-end;


}


/*.container .right {*/
/*    width: 50%;*/
/*}*/


.container h1 {
    margin: 0;
    font-size: min(max(2.3rem, 5vw), 8.5rem);
    padding-bottom: 0;
}

.container .imageContainer {
    overflow: hidden;
    border-radius: .75rem;
    max-height: 600px;
    margin-right: 5rem;
}

.container .imageContainer img {
    height: 100% !important;
    width: 100% !important;
    max-height: 500px;

}

.container .right .aboutContainer {
    max-width: 1000px;
}

.container .right .aboutContainer p {
    font-family: Roboto, sans-serif;
    font-weight: 400;
    color: var(--z-gray);


}

.cvContainer {
    margin-top: 4rem;
    margin-bottom: 8rem;
}

.cvContainer a {
    font-size: 16pt;
    font-weight: bold;
    color: var(--z-primary);
    text-decoration: none;
}

@media (max-width: 768px) {
    .container {
        display: flex;
        flex-direction: column;
    }

    .container .imageContainer {
        margin-right: 0;
    }

    .container > div {
        align-items: flex-start;
    }
}

